[gd_scene load_steps=9 format=3 uid="uid://cmg6ni3iwm6dy"]

[ext_resource type="Script" path="res://Assets/Scripts/Entities/Bullets/bullet.gd" id="1_wg8lw"]
[ext_resource type="Texture2D" uid="uid://c34ci0q7yin71" path="res://Assets/Sprites/Spritesheets/MainSpritesheet.png" id="1_yyotq"]

[sub_resource type="Animation" id="Animation_tcewe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_g2k7j"]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdx78"]
_data = {
"RESET": SubResource("Animation_tcewe"),
"fadeOut": SubResource("Animation_g2k7j")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ahs2g"]
atlas = ExtResource("1_yyotq")
region = Rect2(148, 141, 25, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b13y"]
atlas = ExtResource("1_yyotq")
region = Rect2(20, 143, 23, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfkd2"]
size = Vector2(24, 4)

[node name="Bullet" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_wg8lw")

[node name="FadeAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xdx78")
}

[node name="BulletSprite" type="Marker2D" parent="."]
position = Vector2(12.5, 0)

[node name="BulletOutline" type="Sprite2D" parent="BulletSprite"]
texture = SubResource("AtlasTexture_ahs2g")

[node name="BulletDetail" type="Sprite2D" parent="BulletSprite"]
self_modulate = Color(1, 1, 0.388235, 1)
texture = SubResource("AtlasTexture_1b13y")

[node name="Center" type="Marker2D" parent="."]

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(12.5, 0)
shape = SubResource("RectangleShape2D_hfkd2")
